fix(java17): replace JDK21 List.getFirst()/Thread.threadId() introduced by backported commits
DatabaseContextLifecycleTest used Thread.threadId() (JDK21); WalCommitOrderingTest,
Issue5067KillLockSymmetryTest, and Issue5067MutablePagesCounterDriftTest used
List.getFirst() on plain List<MutablePage>/List<Bucket>. Adapted to
Thread.getId()/List.get(0) for Java 17 compatibility per the JDK17 adaptation catalog.